--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <i class="fas fa-code"></i>Mis Trabajos
               </a>              
               <a href="#contacto">
-                <i class="fas fa-comments"></i>Hablemos
+                <i class="fas fa-comments"></i>Contactame
               </a>
             </div>
           </label>
